--- a/.github/workflows/deploy-api.yml
+++ b/.github/workflows/deploy-api.yml
@@ -15,9 +15,9 @@ jobs:
       - run: echo 'hello world ...'
       - run: ls -la
       - run: touch .env
-      - run: echo 'DEV_DATABASE_URL:${{secrets.PG_CONN}}'  >> .env
+      - run: echo 'DEV_DATABASE_URL:${{secrets.PG_CONN}}' >> .env
       - run: cat .env
-      - run: docker build -t adsoft/pg-restapi:${{github.sha}} .
+      - run: docker build -t aldair07/pg-restapi:${{github.sha}} .
       - run: docker images
    
       - name: docker login
